<resources>
    <string name="webrtc_chat_mute">静音</string>
    <string name="webrtc_chat_hands_free">免提</string>
    <string name="webrtc_chat_refuse">拒接</string>
    <string name="webrtc_chat_answer">接听</string>
    <string name="webrtc_chat_hang_up">挂断</string>
    <string name="webrtc_switch_voice">切到语音</string>
    <string name="webrtc_switch_camera">切换摄像头</string>
    <string name="webrtc_close_camera">关闭摄像头</string>
    <string name="webrtc_open_camera">开启摄像头</string>
</resources>
