<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wr_background"
    android:gravity="center"
    android:padding="20dp">
    <!--静音-->
    <TextView
        android:id="@+id/wr_switch_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:drawableTop="@drawable/webrtc_btn_voice_mute"
        android:drawablePadding="5dp"
        android:gravity="center_horizontal"
        android:text="@string/webrtc_chat_mute"
        android:textColor="@android:color/white"
        android:textSize="@dimen/wr_control_text_size" />
    <!--扬声器-->
    <TextView
        android:id="@+id/wr_hand_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:drawableTop="@drawable/webrtc_hands_free"
        android:drawablePadding="5dp"
        android:gravity="center_horizontal"
        android:text="@string/webrtc_chat_hands_free"
        android:textColor="@android:color/white"
        android:textSize="@dimen/wr_control_text_size" />
    <!--开启关闭摄像头-->
    <TextView
        android:id="@+id/wr_open_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:drawableTop="@drawable/webrtc_btn_open_camera"
        android:drawablePadding="5dp"
        android:text="@string/webrtc_open_camera"
        android:textColor="@android:color/white"
        android:textSize="@dimen/wr_control_text_size" />
    <!--切换摄像头-->
    <TextView
        android:id="@+id/wr_switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wr_open_camera"
        android:layout_alignStart="@+id/wr_open_camera"
        android:layout_alignParentEnd="true"
        android:drawableTop="@drawable/webrtc_switch_camera"
        android:drawablePadding="5dp"
        android:gravity="center_horizontal" />
    <!--挂断-->
    <TextView
        android:id="@+id/wr_switch_hang_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wr_hand_free"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/webrtc_cancel"
        android:drawablePadding="5dp"
        android:gravity="center_horizontal"

        />
</RelativeLayout>